大量新功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,11 @@
             android:name=".View_Post_Activity"
             android:exported="true"
             />
+        <activity android:name=".View_Article"
+            android:exported="true"/>
+        <activity android:name=".View_Collectin"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
