--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FederalSquare"
         tools:targetApi="31">
+
+        <!-- 注册 MyAppGlideModule -->
+        <meta-data
+            android:name="fun.android.federal_square.MyAppGlideModule"
+            android:value="AppGlideModule" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
