--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
         minSdk 26
         targetSdk 35
         versionCode 5
-        versionName "5.7.8"
+        versionName "5.7.8-alpha2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -46,8 +46,8 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
     implementation 'com.github.bumptech.glide:glide:4.16.0'
-    implementation "com.github.bumptech.glide:okhttp3-integration:4.11.0"
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation "com.github.bumptech.glide:okhttp3-integration:4.16.0"
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 
     implementation 'com.google.code.gson:gson:2.11.0'
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
