--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
         minSdk 26
         targetSdk 35
         versionCode 5
-        versionName "5.8.2.alpha2"
+        versionName "5.8.2.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
