--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 
     <application
         android:name=".App"
+        android:resizeableActivity="true"
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_config"
         android:requestLegacyExternalStorage="true"
