--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,12 +46,12 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
 
-    implementation 'com.github.bumptech.glide:glide:4.16.0'
-    implementation "com.github.bumptech.glide:okhttp3-integration:4.16.0"
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
+    implementation 'com.github.bumptech.glide:glide:5.0.0-rc01'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:5.0.0-rc01'
+    annotationProcessor 'com.github.bumptech.glide:compiler:5.0.0-rc01'
     implementation 'com.google.code.gson:gson:2.13.1'
-    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.14'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'io.github.csdn-mobile:RoundView:1.8.1'
