--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- 网络 -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
+        android:name=".system.App"
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_config"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
