--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,17 +7,26 @@ android {
     compileSdk {
         version = release(36)
     }
-
+    sourceSets {
+        main {
+            res.srcDirs = [
+                    'src/main/res/layout/activity',
+                    'src/main/res/layout/view',
+                    'src/main/res/layout/child',
+                    'src/main/res/layout/window',
+                    'src/main/res/layout',
+                    'src/main/res'
+            ]
+        }
+    }
     defaultConfig {
         applicationId "fun.android.federal_square"
         minSdk 24
         targetSdk 36
         versionCode 11
         versionName "7.0.1"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -39,7 +48,7 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
 
-    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'com.squareup.okhttp3:okhttp:5.3.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'io.github.csdn-mobile:RoundView:1.8.1'
 
