--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:5.3.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'io.github.csdn-mobile:RoundView:1.8.1'
+    implementation 'com.google.code.gson:gson:2.13.2'
 
 }
